# ai-dispro-app

./: .dockerignore  .funcignore  .gitignore  Dockerfile  README copy.md  README.md  env.template  function_app.py  pyproject.toml  requirements copy.txt  requirements-dev.txt  requirements.txt
bias-report/: README.md  bias_analysis.ipynb
bias-report/data/: prompts.xlsx  senarios.xlsx
bias-report/utils/: bias_analysis.py  get_prompts.py  report_generation.py  search_snippets.ipynb
src/analysis/: __init__.py  base_worker.py  models.py  orchestrator.py  tasks.py
src/api/: __init__.py  analysis.py  health.py  ingestion.py  setup.py  workflow.py
src/bias-report/: README.md  bias_analysis.ipynb
src/config/: __init__.py  settings_manager.py
src/database/: __init__.py  base.py  migrations.py  session.py
src/ingestion/: __init__.py  models.py  orchestrator.py  utils.py
src/models/: __init__.py  analysisjob.py  analysisresult.py  case.py  charge.py  defendant.py  document.py  event.py  experiment.py  offence.py  prompttemplate.py  section.py  version.py
src/repositories/: __init__.py  analysisjob_repository.py  analysisresult_repository.py  base.py  case_repository.py  charge_repository.py  defendant_repository.py  document_repository.py  event_repository.py  experiment_repository.py  offence_repository.py  prompttemplate_repository.py  section_repository.py  version_repository.py
src/services/: __init__.py  azure_ai_foundry.py  azure_blob_storage.py  azure_docintel.py  azure_identity.py  azure_key_vault.py  (+2 more)
tests/: __init__.py  conftest.py  test_utilities.py
(+41 files in other folders)
